<resources>
    <string name="app_name">Seller</string>
    <string name="title_activity_uprofile">Uprofile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="coll">Name</string>
    <string name="itemType">Item Type</string>
    <string name="weight">Weight</string>
    <string name="noItems">NItems</string>
    <string name="name1">Binuja</string>
    <string name="item1">Electronic</string>
    <string name="weight1">40Kg</string>
    <string name="n1">5</string>
    <string name="name2">Nisura</string>
    <string name="item2">Home</string>
    <string name="weight2">20Kg</string>
    <string name="n2">10</string>
    <string name="name3">uvindu</string>
    <string name="item3">Health</string>
    <string name="weight3">1Kg</string>
    <string name="n3">100</string>
    <string name="name4">Shamal</string>
    <string name="item4">Beauty</string>
    <string name="weight4">1Kg</string>
    <string name="n4">50</string>

</resources>